--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "apexcharts": "^3.36.3",
     "daisyui": "^2.42.1",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-paginate": "^8.1.4",
     "react-scripts": "5.0.1",
